@@ -827,3 +827,24 @@ IATI出版社
 
 #change_settings_text
 更改设置
+
+#search_recipient_txt
+接受者
+
+#search_donor_txt
+捐赠者
+
+#search_sector_txt
+扇形
+
+#search_sectorcategory_txt
+行业类别
+
+#search_publisher_txt
+出版者
+
+#search_year_txt
+年
+
+#search_view_txt
+您搜索：
