@@ -825,3 +825,24 @@ Themes
 
 #change_settings_text
 Change Settings
+
+#search_recipient_txt
+Recipient
+
+#search_donor_txt
+Donor
+
+#search_sector_txt
+Sector
+
+#search_sectorcategory_txt
+Sector Category
+
+#search_publisher_txt
+Publisher
+
+#search_year_txt
+Year
+
+#search_view_txt
+You searched:
