@@ -827,3 +827,24 @@ Thèmes
 
 #change_settings_text
 Modifier Les Paramètres
+
+#search_recipient_txt
+Destinataire
+
+#search_funder_txt
+Donateur
+
+#search_sector_txt
+Secteur
+
+#search_sectorcategory_txt
+Secteur Catégorie
+
+#search_publisher_txt
+Editeur
+
+#search_year_txt
+An
+
+#search_view_txt
+Vous avez cherché:
