@@ -216,6 +216,7 @@
 #main_min
 {main_countrymin}
 {main_pubmin}
+{main_searchmin}
 
 #main_countrymin
 <div class="default min">
@@ -235,10 +236,27 @@
 		</tr>
 	</table>
 </div>
+
+#main_searchmin
+<div class="default min">
+	<table class="search min">
+		<tr>
+			<td colspan="3" rowspan="2" class="head">{search_view_txt}</td>
+			<td>Korea, Democratic People's Republic of<span>( {search_recipient_txt})</span></td>
+            <td>Organisation for Security and Co-operation in Europe<span>( {search_donor_txt})</span></td>
+            <td>Civilian peace-building, conflict prevention and resolution<span>( {search_sector_txt})</span></td>
+          </tr><tr>
+            <td>Agriculture and food security<span>( {search_sectorcategory_txt})</span></td>
+            <td>Agency for Cooperation and Research in Development (ACORD)<span>( {search_publisher_txt})</span></td>
+            <td>1997<span>( {search_year_txt})</span></td>
+          </tr>
+	</table>
+</div>
 	
 #main_max
 {main_country}
 {main_publisher}
+{main_search}
 
 #main_country
 <div class="default">
@@ -256,6 +274,24 @@
 		<tr>
 			<td class="name publisher">{portal_name}</td>
 		</tr>
+	</table>
+</div>
+
+#main_search
+<div class="default">
+	<table class="search">
+		<tr>
+			<td colspan="3" class="head">{search_view_txt}</td>
+          </tr>
+          <tr>
+            <td>Korea, Democratic People's Republic of<span>( {search_recipient_txt})</span></td>
+            <td>Organisation for Security and Co-operation in Europe<span>( {search_donor_txt})</span></td>
+            <td>Civilian peace-building, conflict prevention and resolution<span>( {search_sector_txt})</span></td>
+          </tr><tr>
+            <td>Agriculture and food security<span>( {search_sectorcategory_txt})</span></td>
+            <td>Agency for Cooperation and Research in Development (ACORD)<span>( {search_publisher_txt})</span></td>
+            <td>1997<span>( {search_year_txt})</span></td>
+          </tr>
 	</table>
 </div>
 
