@@ -824,3 +824,24 @@ IATI प्रकाशक
 
 #change_settings_text
 परिवर्तन स्थान
+
+#search_recipient_txt
+प्राप्तकर्ता
+
+#search_donor_txt
+दाता
+
+#search_sector_txt
+क्षेत्र
+
+#search_sectorcategory_txt
+सेक्टर श्रेणी
+
+#search_publisher_txt
+प्रकाशक
+
+#search_year_txt
+साल
+
+#search_view_txt
+आप खोज:
