@@ -827,3 +827,24 @@ IATI出版
 
 #change_settings_text
 設定の変更
+
+#search_recipient_txt
+受信者
+
+#search_donor_txt
+ドナー
+
+#search_sector_txt
+セクター
+
+#search_sectorcategory_txt
+セクターカテゴリー
+
+#search_publisher_txt
+出版社
+
+#search_year_txt
+年
+
+#search_view_txt
+検索結果：
