@@ -824,3 +824,24 @@ Temas
 
 #change_settings_text
 Cambiar Ajustes
+
+#search_recipient_txt
+Beneficiario
+
+#search_donor_txt
+Donante
+
+#search_sector_txt
+Sector
+
+#search_sectorcategory_txt
+Sector Categoría
+
+#search_publisher_txt
+Editor
+
+#search_year_txt
+Año
+
+#search_view_txt
+Ha buscado:
