@@ -1,3 +1,9 @@
+Development Portal (2015-07-23 shi)
+==============================
+Added translations for Search
+Added Search headers for main pages
+
+
 Development Portal (2015-06-24 shi)
 ==============================
 Temporary fix mobile view
